2003-04-05  Dimitrie O. Paun <dpaun@rogers.com>

	* windres.c: Add -l for compatibility with wrc, and rc.
	Use the short option as a key for long options that have
	a synonymous short option.
	* doc/binutils.texi: Added -l to the list of options.

2003-04-03  Dimitrie O. Paun <dpaun@rogers.com>

	* windres.c: Add -U for compatibility with wrc, rc, and cpp.
	(main): Just pass the -U option down to the preprocessor.
	* doc/binutils.texi: Added -U to the list of options.

2003-04-01  Dimitrie O. Paun <dpaun@rogers.com>

	* windres.c (usage): Report -r option.
	(main): Ignore the -r option.
	* doc/binutils.texi: Add -r to the list of options.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

	* MAINTAINERS: Add myself as Xtensa maintainer.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

	* readelf.c: Include "elf/xtensa.h".
	(guess_is_rela): Add EM_XTENSA and EM_XTENSA_OLD to list of
	targets that use RELA relocations.
	(dump_relocations): Call elf_xtensa_reloc_type for
	EM_XTENSA and EM_XTENSA_OLD.
	(get_machine_name): Handle EM_XTENSA and EM_XTENSA_OLD.

2003-04-01  Nick Clifton  <nickc@redhat.com>

	* configure.in: Change "arm-pe*" to "arm-*-pe*".  Similarly for
	thumb-pe*, mcore-pe and mcore-*elf.
	* configure: Regenerate.

2003-03-31  Alexandre Oliva  <aoliva@redhat.com>

	* objdump.c (dump_data): Don't truncate the address to long; make
	the width large enough, and uniform for all entries in a section.

2003-03-31  H.J. Lu <hjl@gnu.org>

	* readelf.c: Include "libiberty.h".
	(dynamic_relocations): New.
	(process_relocs): Properly handle dynamic relocation.
	(process_dynamic_segment): Fill relocation elements in
	dynamic_info.

2003-03-31  Kevin Buettner <kevinb@redhat.com>

	* readelf.c (read_and_display_attr, read_and_display_attr_value):
	Add new arguments ``offset_size'' and ``dwarf_version''.  Adjust
	all callers.
	(display_debug_lines, display_debug_pubnames, display_debug_info)
	(display_debug_aranges, display_debug_frames, read_and_display_attr)